<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="fr.uha.perrier.attraction.ui.park.ParkViewModel" />

        <variable
            name="addAttractionCollection"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.attraction.PersonFragment">

        <EditText
            android:id="@+id/user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/title_park"
            android:inputType="textPersonName"
            android:text="@={vm.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/place"
            android:inputType="textPersonName"
            android:text="@={vm.place}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user" />

        <EditText
            android:id="@+id/prixMin"
            android:layout_width="193dp"
            android:layout_height="45dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/priceMin"
            android:inputType="textPersonName"
            android:text="@={vm.priceMin}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startHour"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/prixMax"
            android:layout_width="190dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/priceMin"
            android:inputType="textPersonName"
            android:text="@={vm.priceMax}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/prixMin"
            app:layout_constraintTop_toBottomOf="@+id/endHour"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/startHour"
            android:layout_width="195dp"
            android:layout_height="45dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/startHour"
            android:inputType="textPersonName"
            android:text="@={vm.startHour}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/type" />

        <EditText
            android:id="@+id/endHour"
            android:layout_width="192dp"
            android:layout_height="46dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="12dp"
            android:ems="10"
            android:hint="@string/endHour"
            android:inputType="textPersonName"
            android:text="@={vm.endHour}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toEndOf="@+id/startHour"
            app:layout_constraintTop_toBottomOf="@+id/type" />

        <Spinner
            android:id="@+id/type"
            android:layout_width="390dp"
            android:layout_height="47dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:entries="@array/types"
            android:selectedItemPosition="@={vm.typePosition}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/place" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="392dp"
            android:layout_height="259dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.363"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prixMin" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="52dp"
            android:clickable="true"
            android:onClick="@{(view) -> addAttractionCollection.onClick(view)}"
            android:src="@drawable/ic_outline_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
